--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input pattern="^\d{2}-\d{3}$" required placeholder="12-345" /><br>
             <input pattern="^[A-Z]{2}-\d{3}-\d{6}-\d$" required placeholder="PL-123-456789-5" /><br>
             <input pattern="^[A-Z]{3}\d{6}$" required placeholder="ABC123456" /><br>
-            <input pattern="((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)" required placeholder="255.255.255.255" /><br>
+            <input pattern="((1?\d?\d)|(2[0-4]\d)|(25[0-5]))(\.((1?\d?\d)|(2[0-4]\d)|(25[0-5]))){3}" required placeholder="255.255.255.255" /><br>
             <input pattern="^(www\.)?([a-zA-Z_-]+\.)+([a-zA-Z_-]{2,}){1}$" required placeholder="www.p.lodz.pl" /><br>
             <input pattern="^[A-Z]{1}:\\(windows|winnt|win|dos|msdos)(\\[a-z0-9.-]+)$" required placeholder="C:\windows\qwe" /><br>
             <input pattern="^[A-Z]{1}:\\(([wW][iI][nN][dD][oO][wW][sS])|([wW][iI][nN][nN][tT])|([wW][iI][nN])|([dD][oO][sS])|([mM][sS][dD][oO][sS]))(\\[a-zA-Z0-9.-]+)$" required placeholder="C:\WiNdOwS\asd" /><br>
