--- a/index.html
+++ b/index.html
@@ -1,46 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            input:invalid {
-                border: 1px solid red;
-            }
-            input:valid {
-                border: 1px solid green;
-            }
-            input {
-                margin: 2px;
-                border: 1px solid black;
-            }
-        </style>
-    </head>
     <body>
-        <form>
-            <!--
-                Proszę przygotować stronę internetową na której znajdować się będą polatekstowe (każde w oddzielnej linii) sprawdzające poprawność wpisania danych wymienionych poniżej. Do każdego pola ma być dodany placeholder z przykładowymi poprawnymi danymi. Uwaga w celu zapewnienie maksymalnej kompatybilności pomiędzy przeglądarkami proszę wykorzystać CSS do ustawienia zielonego koloru obramówki pól wypełnionych poprawnie i czerwonego dla wypełnionych niepoprawnie. Wszystkie podpunkty mają być zrealizowanie przy wykorzystaniu standardowych opcji HTML5, CSS 3 i JavaScript.
-                1) adres email
-                2) kod pocztowy
-                3) numer nip (z kreskami)
-                4) numer dowodu
-                5) adres ipv4
-                6) strona www
-                7a) ścieżka litera dysku:\katalog systemu (windows, winnt, win, dos, msdos)\katalog podrzędny (np. C:\windows\temp lub d:\msdos). 
-                7b) to samo, co w 7a, ale ma pozwalać na użycie zarówno dużych, jak i małych liter (Windows,windows,WinDowS)
-                8) ścieżka do pliku w katalogu /etc/ (np. /etc/passwd, /etc/hosts, itp)
-                9) adres ipv6
-                10) Numer telefonu
-            -->
-            <input pattern="^[a-zA-Z._-]{3,}@[a-zA-Z._-]{3,}\.[a-z]{2,3}$" required placeholder="person@example.com" /><br>
-            <input pattern="^\d{2}-\d{3}$" required placeholder="12-345" /><br>
-            <input pattern="^[A-Z]{2}-\d{3}-\d{6}-\d$" required placeholder="PL-123-456789-5" /><br>
-            <input pattern="^[A-Z]{3}\d{6}$" required placeholder="ABC123456" /><br>
-            <input pattern="((1?\d?\d)|(2[0-4]\d)|(25[0-5]))(\.((1?\d?\d)|(2[0-4]\d)|(25[0-5]))){3}" required placeholder="255.255.255.255" /><br>
-            <input pattern="^(www\.)?([a-zA-Z_-]+\.)+([a-zA-Z_-]{2,}){1}$" required placeholder="www.p.lodz.pl" /><br>
-            <input pattern="^[A-Z]{1}:\\(windows|winnt|win|dos|msdos)(\\[a-z0-9.-]+)$" required placeholder="C:\windows\qwe" /><br>
-            <input pattern="^[A-Z]{1}:\\(([wW][iI][nN][dD][oO][wW][sS])|([wW][iI][nN][nN][tT])|([wW][iI][nN])|([dD][oO][sS])|([mM][sS][dD][oO][sS]))(\\[a-zA-Z0-9.-]+)$" required placeholder="C:\WiNdOwS\asd" /><br>
-            <input pattern="^/etc/[a-zA-Z\d.-_]+$" required placeholder="/etc/passwd" /><br>
-            <input pattern="^([a-f\d]{1,4})(:([a-f\d]{1,4})){7}$" required placeholder="2001:db8:db8:db8:db8:db8:db8:db8" /><br>
-            <input pattern="^(\+\d{1,2} )?\d{3} \d{3} \d{3}$" required placeholder="[+48 ]123 456 789" /><br>
-        </form>
+        <h3><a href="z1/index.html">Zadanie 1</a></h3>
+        <h3><a href="z2/index.html">Zadanie 2</a></h3>
     </body>
 </html>
