Add different input types

--- a/z2/index.html
+++ b/z2/index.html
@@ -41,6 +41,12 @@
             <input pattern="^/etc/[a-zA-Z\d.-_]+$" required placeholder="/etc/passwd" /><br>
             <input pattern="^([a-f\d]{1,4})(:([a-f\d]{1,4})){7}$" required placeholder="2001:db8:db8:db8:db8:db8:db8:db8" /><br>
             <input pattern="^(\+\d{1,2} )?\d{3} \d{3} \d{3}$" required placeholder="[+48 ]123 456 789" /><br>
+            <br><br>
+            <input type="date" /><br>
+            <input type="date" /><br>
+            <input type="time" /><br>
+            <input type="time" /><br>
+            <input type="color" /><br>
         </form>
     </body>
 </html>
