--- a/z2/index.html
+++ b/z2/index.html
@@ -33,7 +33,7 @@
             <input pattern="^[a-zA-Z._-]{3,}@[a-zA-Z._-]{3,}\.[a-z]{2,3}$" required placeholder="person@example.com" /><br>
             <input pattern="^\d{2}-\d{3}$" required placeholder="12-345" /><br>
             <input pattern="^[A-Z]{2}-\d{3}-\d{6}-\d$" required placeholder="PL-123-456789-5" /><br>
-            <input pattern="^[A-Z]{3}\d{6}$" required placeholder="ABC123456" /><br>
+            <input pattern="^[a-zA-Z]{3}\d{6}$" required placeholder="ABC123456" /><br>
             <input pattern="((1?\d?\d)|(2[0-4]\d)|(25[0-5]))(\.((1?\d?\d)|(2[0-4]\d)|(25[0-5]))){3}" required placeholder="255.255.255.255" /><br>
             <input pattern="^(www\.)?([a-zA-Z_-]+\.)+([a-zA-Z_-]{2,}){1}$" required placeholder="www.p.lodz.pl" /><br>
             <input pattern="^[A-Z]{1}:\\(windows|winnt|win|dos|msdos)(\\[a-z0-9.-]+)$" required placeholder="C:\windows\qwe" /><br>
@@ -44,7 +44,7 @@
             <br><br>
             <input type="date" /><br>
             <input type="date" /><br>
-            <input type="time" /><br>
+            <input type="time" lang="en-US" /><br>
             <input type="time" /><br>
             <input type="color" /><br>
         </form>
