Fix Windows regex

--- a/z2/index.html
+++ b/z2/index.html
@@ -36,8 +36,8 @@
             <input pattern="^[a-zA-Z]{3}\d{6}$" required placeholder="ABC123456" /><br>
             <input pattern="((1?\d?\d)|(2[0-4]\d)|(25[0-5]))(\.((1?\d?\d)|(2[0-4]\d)|(25[0-5]))){3}" required placeholder="255.255.255.255" /><br>
             <input pattern="^(https?://)?(www\.)?([a-zA-Z_-]+\.)+([a-zA-Z_-]{2,}){1}$" required placeholder="www.p.lodz.pl" /><br>
-            <input pattern="^[A-Z]{1}:\\(windows|winnt|win|dos|msdos)(\\[a-z0-9.-]+)$" required placeholder="C:\windows\qwe" /><br>
-            <input pattern="^[A-Z]{1}:\\(([wW][iI][nN][dD][oO][wW][sS])|([wW][iI][nN][nN][tT])|([wW][iI][nN])|([dD][oO][sS])|([mM][sS][dD][oO][sS]))(\\[a-zA-Z0-9.-]+)$" required placeholder="C:\WiNdOwS\asd" /><br>
+            <input pattern="^[a-zA-Z]{1}:\\(windows|winnt|win|dos|msdos)(\\[a-z0-9.-]+)$" required placeholder="C:\windows\qwe" /><br>
+            <input pattern="^[a-zA-Z]{1}:\\(([wW][iI][nN][dD][oO][wW][sS])|([wW][iI][nN][nN][tT])|([wW][iI][nN])|([dD][oO][sS])|([mM][sS][dD][oO][sS]))(\\[a-zA-Z0-9.-]+)$" required placeholder="C:\WiNdOwS\asd" /><br>
             <input pattern="^/etc/[a-zA-Z\d.-_]+$" required placeholder="/etc/passwd" /><br>
             <input pattern="^([a-f\d]{1,4})(:([a-f\d]{1,4})){7}$" required placeholder="2001:db8:db8:db8:db8:db8:db8:db8" /><br>
             <input pattern="^(\+\d{1,2} )?\d{3} \d{3} \d{3}$" required placeholder="[+48 ]123 456 789" /><br>
