--- a/z2/index.html
+++ b/z2/index.html
@@ -42,11 +42,11 @@
             <input pattern="^([a-f\d]{1,4})(:([a-f\d]{1,4})){7}$" required placeholder="2001:db8:db8:db8:db8:db8:db8:db8" /><br>
             <input pattern="^(\+\d{1,2} )?\d{3} \d{3} \d{3}$" required placeholder="[+48 ]123 456 789" /><br>
             <br><br>
-            <input type="date" /><br>
-            <input type="date" /><br>
-            <input type="time" lang="en-US" /><br>
-            <input type="time" /><br>
-            <input type="color" /><br>
+            <input type="date" /> - Wybierz date<br>
+            <input type="date" /> - Wybierz date<br>
+            <input type="time" lang="en-US" /> - Wybierz czas (12h)<br>
+            <input type="time" /> - Wybierz czas (24h)<br>
+            <input type="color" /> - Wybierz kolor<br>
         </form>
     </body>
 </html>
