--- a/z2/index.html
+++ b/z2/index.html
@@ -43,8 +43,8 @@
             <input pattern="^(\+\d{1,2} )?\d{3} \d{3} \d{3}$" required placeholder="[+48 ]123 456 789" /><br>
             <br><br>
             <input type="date" /> - Wybierz date<br>
-            <input type="date" /> - Wybierz date<br>
-            <input type="time" lang="en-US" /> - Wybierz czas (12h)<br>
+            <input type="date" min="2021-12-06" max="2021-12-10" /> - Wybierz date<br>
+            <input type="time" max="12:00" /> - Wybierz czas (12h)<br>
             <input type="time" /> - Wybierz czas (24h)<br>
             <input type="color" /> - Wybierz kolor<br>
         </form>
