Add platform for part2

--- a/z3/index_2.html
+++ b/z3/index_2.html
@@ -2,11 +2,37 @@
 <html>
     <head>
         <style>
+            body {
+                margin: 0;
+            }
+            .header {
+                width: 100vw;
+                height: 20vh;
+                background: lightblue;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+            }
+            .platform {
+                width: 100vw;
+                height: 80vh;
+                background: lightgreen;
+            }
+            .spawnpoint {
+                width: 100px;
+                height: 100px;
+                border: 2px black solid;
+            }
         </style>
+        <script>
+            
+        </script>
     </head>
     <body>
-        <form>
-            
-        </form>
+        <div class="header">
+            <button>Generuj klocek</button>
+            <div class="spawnpoint"></div>
+        </div>
+        <div class="platform"></div>
     </body>
 </html>
