--- a/z3/index_2.html
+++ b/z3/index_2.html
@@ -20,14 +20,13 @@
                 width: 100vw;
                 height: 80vh;
                 background: lightgreen;
-                display: flex;
+                /* display: flex;
                 justify-content: center;
-                align-items: center;
+                align-items: center; */
             }
             .block {
                 width: 50px;
                 height: 50px;
-                border: 1px black solid;
             }
         </style>
         <script>
@@ -39,7 +38,44 @@
                 b = Math.random() * 255
                 block.style.background = `rgb(${r}, ${g}, ${b})`
                 block.classList.add("block")
+                block.ondragstart = blockOnDragStart
+                block.ondragover = blockOnDragOver
+                block.ondrop = blockOnDrop
+                block.ondragend = blockOnDragEnd
+                block.draggable = true
+                block.style.position = "relative"
                 document.querySelector(".spawnpoint").appendChild(block)
+            }
+
+            var currentDrag = null
+
+            blockOnDragStart = (ev) => {
+                currentDrag = ev.currentTarget;
+            }
+
+            blockOnDragEnd = (ev) => {
+                currentDrag = null;
+            }
+
+            blockOnDragOver = (ev) => {
+                ev.preventDefault()
+            }
+
+            blockOnDrop = (ev) => {
+                currentDrag.parentNode.removeChild(currentDrag)
+                document.querySelector(".platform").appendChild(currentDrag)
+                block.style.position = "absolute"
+                currentDrag.style.left = ev.target.style.left
+                currentDrag.style.top = parseFloat(ev.target.style.top) - 50 + "px"
+                ev.stopPropagation()
+            }
+
+            platformOnDrop = (ev) => {
+                currentDrag.parentNode.removeChild(currentDrag)
+                document.querySelector(".platform").appendChild(currentDrag)
+                block.style.position = "absolute"
+                currentDrag.style.left = ev.clientX + "px"
+                currentDrag.style.top = ev.clientY + "px"
             }
         </script>
     </head>
@@ -48,8 +84,6 @@
             <button onclick="generateBlock(event)">Generuj klocek</button>
             <div class="spawnpoint"></div>
         </div>
-        <div class="platform">
-            <div class="block" style="background: white;"></div>
-        </div>
+        <div class="platform" ondrop="platformOnDrop(event)" ondragover="blockOnDragOver(event)"></div>
     </body>
 </html>
