--- a/z3/index_2.html
+++ b/z3/index_2.html
@@ -19,10 +19,7 @@
             .platform {
                 width: 100vw;
                 height: 80vh;
-                background: lightgreen;
-                /* display: flex;
-                justify-content: center;
-                align-items: center; */
+                background: white;
             }
             .block {
                 width: 50px;
