--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <body>
         <h3><a href="z1/index.html">Zadanie 1</a></h3>
         <h3><a href="z2/index.html">Zadanie 2</a></h3>
-        <h3><a href="z3/index_1.html">Zadanie 3.1</a></h3>
-        <h3><a href="z3/index_2.html">Zadanie 3.2</a></h3>
+        <h3><a href="z3/index_1.html">Zadanie 3 czesc 1</a></h3>
+        <h3><a href="z3/index_2.html">Zadanie 3 czesc 2</a></h3>
+        <h3><a href="z3.1/index.html">Zadanie 3.1</a></h3>
     </body>
 </html>
